// Vitest Snapshot v1

exports[`Transform mode correctly renders composited guides 1`] = `
[
  {
    "geometry": {
      "coordinates": [
        -1,
        -1,
      ],
      "type": "Point",
    },
    "properties": {
      "editHandleType": "scale",
      "guideType": "editHandle",
      "positionIndexes": [
        0,
      ],
    },
    "type": "Feature",
  },
  {
    "geometry": {
      "coordinates": [
        1,
        -1,
      ],
      "type": "Point",
    },
    "properties": {
      "editHandleType": "scale",
      "guideType": "editHandle",
      "positionIndexes": [
        1,
      ],
    },
    "type": "Feature",
  },
  {
    "geometry": {
      "coordinates": [
        1,
        1,
      ],
      "type": "Point",
    },
    "properties": {
      "editHandleType": "scale",
      "guideType": "editHandle",
      "positionIndexes": [
        2,
      ],
    },
    "type": "Feature",
  },
  {
    "geometry": {
      "coordinates": [
        -1,
        1,
      ],
      "type": "Point",
    },
    "properties": {
      "editHandleType": "scale",
      "guideType": "editHandle",
      "positionIndexes": [
        3,
      ],
    },
    "type": "Feature",
  },
]
`;

exports[`Transform mode correctly renders composited guides 2`] = `
[
  {
    "geometry": {
      "coordinates": [
        0,
        1.2223901604670657,
      ],
      "type": "Point",
    },
    "properties": {
      "editHandleType": "rotate",
      "guideType": "editHandle",
    },
    "type": "Feature",
  },
]
`;

exports[`Transform mode correctly renders composited guides 3`] = `
[
  {
    "geometry": {
      "coordinates": [
        [
          -1,
          -1,
        ],
        [
          1,
          -1,
        ],
        [
          1,
          1,
        ],
        [
          -1,
          1,
        ],
        [
          -1,
          -1,
        ],
      ],
      "type": "LineString",
    },
    "properties": {},
    "type": "Feature",
  },
  {
    "geometry": {
      "coordinates": [
        [
          0,
          1,
        ],
        [
          0,
          1.2223901604670657,
        ],
      ],
      "type": "LineString",
    },
    "properties": {},
    "type": "Feature",
  },
]
`;
